# CSE-227-OPENMCP

./: .env  .gitignore  CONTRIBUTING.md  LICENSE  README.md  commit_test.txt  gitlab_openapi_schema.yaml  parse_json_to_server.py  parse_openapi_to_json.py  poc.py  pyproject.toml  server.py  twitter_mcp.json
.github/workflows/: ci.yaml  release.yaml
config/: policies.yaml
examples/: policies.yaml  server.py
examples/github_example/: Prompts.md  policies.yaml  server.py
gmail_fastapi_server/: main.py  requirements.txt
mcp_macaroon_middleware/: __init__.py  exceptions.py
mcp_macaroon_middleware/config/: __init__.py  loader.py
mcp_macaroon_middleware/core/: __init__.py  middleware.py  policy_engine.py
mcp_macaroon_middleware/helpers/: __init__.py  text_extraction_helpers.py
mcp_macaroon_middleware/models/: __init__.py  caveat.py
mcp_macaroon_middleware/policies/: __init__.py  decorators.py  default_enforcers.py
mcp_macaroon_middleware/validators/: __init__.py  caveat_validator.py
mcp_server/: mcp.py  mcp_client.py  mcp_server.py  pyproject.toml
mcp_server/.gemini/: settings.json
tests/: conftest.py  test_middleware.py
